...
      closeScreen();
    },
    [closeScreen, dispatch, onSubmit],
  );

  const handleAcceptAll = useCallback(() => {
    trackAnalyticsOptInScreenBClick("Accept all", "main", true);
    applyConsent(true, true);
  }, [applyConsent]);

  const handleRefuseAll = useCallback(() => {
    trackAnalyticsOptInScreenBClick("Refuse all", "main", shouldWeTrack);
    applyConsent(false, false);
  }, [applyConsent, shouldWeTrack]);

  const handleOpenPreferences = useCallback(() => {
    trackAnalyticsOptInScreenBClick("Set preferences", "main", shouldWeTrack);
    setDraftShareAnalyticsState(false);
...
